mac bug: dropzone flickering due to secret merch iframes

--- a/styles/main.less
+++ b/styles/main.less
@@ -167,7 +167,7 @@ body.kiosk .ios-app-store {
 }
 
 #drop {
-  position: absolute;
+  position: fixed;
   width: 100vw;
   height: 100vh;
   top: 0;
